--- a/personal.html
+++ b/personal.html
@@ -116,25 +116,14 @@
 						</div>		
 	  </div>
 	  
-		  <div class="w3-row">
-	   
-		<!-- Hide this text on small devices -->
-		<div class="w3-col m6 w3-hide-small w3-padding-large"><br><br>
-		  <p align="left">
-		  My interest in photography began when I was around 17 (2002). 
-		  This was a strange time, as I was walking on a cold breezy evening winter after a hecitc session at my institute. 
-		  Lost in thoughts, having flashbacks of all the good and bad things in my past. Suddenly, a little creature caught my attention.
-		  I casually captured the moment using my Samsung S4 (Selective Mode)without any artistic intention, but the desire to <b>"freeze time"</b>. And as I would like to call is, I was born artist. 
-		  I quickly came to realise that what I really needed was a proper camera with manual control, thus, I started to save up.
-	</p>
-		</div>
-	   
-		<div class="w3-col m6 w3-center w3-padding-large">
-		<p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-		<img src="images/thumbs/intial.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
-					</a>
-						</div>		
-	  </div>
+<div class="w3-row">
+<!-- Hide this text on small devices --> 
+<div class="w3-col m6 w3-hide-small w3-padding-large">
+<br><br> 
+<p align="left"> ……………………………………………………………………………………………………………………………… ……………………………………………………………… ……………………………………………………………… 
+			……………………………………………………………………………………………………………………………… ……………………………………………………………… 
+			……………………………………………………………… ……………………………………………………………………………………………………………………………… ………………………………………………………………
+			……………………………………………………………… </p>
 	  
 	  <!-- ************** DIV - MyName - ENDS ************** -->
 	  
