--- a/personal.html
+++ b/personal.html
@@ -96,7 +96,7 @@
 
 	<!-- ************** DIV - MyName - START ************** -->
 
-	  <div class="w3-row">
+	   <div class="w3-row">
 	   
 		<!-- Hide this text on small devices -->
 		<div class="w3-col m6 w3-hide-small w3-padding-large"><br><br>
@@ -116,14 +116,6 @@
 						</div>		
 	  </div>
 	  
-<div class="w3-row">
-<!-- Hide this text on small devices --> 
-<div class="w3-col m6 w3-hide-small w3-padding-large">
-<br><br> 
-<p align="left"> ……………………………………………………………………………………………………………………………… ……………………………………………………………… ……………………………………………………………… 
-			……………………………………………………………………………………………………………………………… ……………………………………………………………… 
-			……………………………………………………………… ……………………………………………………………………………………………………………………………… ………………………………………………………………
-			……………………………………………………………… </p>
 	  
 	  <!-- ************** DIV - MyName - ENDS ************** -->
 	  
@@ -136,29 +128,23 @@
 		<a href="images/fulls/me5.jpg">
 	   
 		<div class="w3-col m6 w3-center w3-padding-large">
-		<p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>My Name</b></p><br>
+		<p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Insect</b></p><br>
 		<img src="images/thumbs/me5.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" text="right"/>
 					</a>
 						</div>
 		<br><br>
 		<!-- Hide this text on small devices -->
 		<div class="w3-col m6 w3-hide-small w3-padding-large">
-		  <p>………………………………………………………………………………………………………………………………
-	………………………………………………………………
-	………………………………………………………………
-	………………………………………………………………………………………………………………………………
-	………………………………………………………………
-	………………………………………………………………
-
-	………………………………………………………………………………………………………………………………
-	………………………………………………………………
-	………………………………………………………………
-
-
+		  <p>
 
 	</p>
 		</div>
 	  </div>
+	  
+	
+	 
+	  
+	  
 	  <!-- ************** DIV - MyName - ENDS ************** -->
 	  
 	  
