--- a/personal.html
+++ b/personal.html
@@ -76,7 +76,7 @@
       <div class="w3-row">
          <!-- Hide this text on small devices -->
          <div class="w3-row">
-            <a href="images/fulls/mywork1.jpg" ">
+            <a href="images/fulls/mywork1.jpg">
                <div class="w3-col m6 w3-center w3-padding-large" style= "float:RIGHT">
                   <p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Beginning of photography era</b></p>
                   <br>
@@ -123,7 +123,7 @@
             <div class="w3-col m6 w3-center w3-padding-large">
                <p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Insect</b></p>
                <br>
-               <img src="images/thumbs/mywork1.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" text="right"/>
+               <img src="images/thumbs/me5.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" text="right"/>
          </a>
          </div>
          <br><br><br>
