--- a/personal.html
+++ b/personal.html
@@ -73,14 +73,15 @@
 
 	  
 	  
+        
       <div class="w3-row">
          <!-- Hide this text on small devices -->
          <div class="w3-row">
-            <a href="images/fulls/mywork1.jpg">
+            <a href="images/fulls/me5.jpg" ">
                <div class="w3-col m6 w3-center w3-padding-large" style= "float:RIGHT">
-                  <p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Beginning of photography era</b></p>
+                  <p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Insect</b></p>
                   <br>
-                  <img src="images/thumbs/mywork1.jpg" alt="" style="float:right"; class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" text="right"/>
+                  <img src="images/thumbs/me5.jpg" alt="" style="float:right"; class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" text="right"/>
             </a>
             </div>
             <br><br><br>
@@ -116,7 +117,7 @@
                </p>
             </div>
          </div>
-      </div>
+	      
       <!-- ********************************************************************************* -->
       <div class="w3-row">
          <a href="images/fulls/me5.jpg">
