--- a/personal.html
+++ b/personal.html
@@ -166,7 +166,7 @@
                <img src="images/thumbs/mywork2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+               <img src="images/thumbs/mywork3.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
             </div>
             <div class="w3-col m3">
                <img src="images/thumbs/mywork4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
