--- a/personal.html
+++ b/personal.html
@@ -174,13 +174,13 @@
          </div>
          <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork10.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+               <img src="images/thumbs/mywork10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
             </div>
             <div class="w3-col m3">
                <img src="images/thumbs/me6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/me10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+               <img src="images/thumbs/me11.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
             </div>
             <div class="w3-col m3">
                <img src="images/thumbs/me8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
