--- a/personal.html
+++ b/personal.html
@@ -177,7 +177,7 @@
                <img src="images/thumbs/mywork10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork6.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+               <img src="images/thumbs/mywork6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
             </div>
             <div class="w3-col m3">
                <img src="images/thumbs/me11.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
