--- a/personal.html
+++ b/personal.html
@@ -180,7 +180,7 @@
                <img src="images/thumbs/mywork6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/me11.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+               <img src="images/thumbs/mywork11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
             </div>
             <div class="w3-col m3">
                <img src="images/thumbs/me8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
