--- a/personal.html
+++ b/personal.html
@@ -77,7 +77,7 @@
       <div class="w3-row">
          <!-- Hide this text on small devices -->
          <div class="w3-row">
-            <a href="images/fulls/mywork1.jpg" ">
+            <a href="images/thumbs/mywork1.jpg" ">
                <div class="w3-col m6 w3-center w3-padding-large" style= "float:RIGHT">
                   <p><b><i class="fa fa-user w3-margin-right" class= "text-align= right;" ></i>Insect</b></p>
                   <br>
