--- a/personal.html
+++ b/personal.html
@@ -89,22 +89,23 @@
             <div class="w3-col m6 w3-hide-small w3-padding-large">
                <p style= "float:right">
                <p>
-                  My interest in photography began when I was around 17 (2002). 
-                  This was a strange time, 
-                  as I was walking on a cold breezy winter after a hecitc session at the institue. 
-                  Lost in thoughts, having flashbacks of all the good and bad things in my past. Suddenly, 
-                  a little creature caught my attention. 
-                  I casually captured the moment using my Samsung S4 (Selective Mode) without any artistic intention, 
-                  but the desire to "freeze time".  
-				<br>	
-                  <span id="dots">...</span><span id="more">
-				 My interest in photography began at the young age of 17 (2012). 
+                 My interest in photography began at the young age of 17 (2012). 
 		       As I was walking on a cold and breezy, winter day I became infatuated in my thoughts, 
 		       of all the good and bad things in my past. Suddenly, a little creature caught my attention. 
 		       I casually captured the moment using my Samsung S4 (Selective Mode) without any artistic intention, 
 		       but the desire to "freeze time". 
-		       As I glanced at the picture, I felt this weird interconnecting feeling. I then contemplated the picture from each angle, attempting to embrace the natural aspects. When suddenly I realised it's not the camera that captured that moment, rather it was the eye and, that is how the journey began. I started capturing objects on daily basis. From towering buildings of urban cities to even plucked leaves on the ground, everything started to draw my attention. As the time went by, my interest for photography gradually increased. The interest really boosted when I tried my friend’s Sony a600 (Mirrorless) a prime lens for the first time. What an experience it was! I was forced to move, to think about my shots and to work harder on composition. I had to learn to zoom with my feet! Added to that was the fact that with a fast prime lens I was able to blur the background and get shots that were impossible before. And so my enthusiasm was born.
-
+				<br>	
+                  <span id="dots">...</span><span id="more">
+				 As I glanced at the picture, I felt this weird interconnecting feeling. 
+		       I then contemplated the picture from each angle, attempting to embrace the natural aspects. 
+		       When suddenly I realised it's not the camera that captured that moment, rather it was the eye and, 
+		       that is how the journey began. I started capturing objects on daily basis. 
+		       From towering buildings of urban cities to even plucked leaves on the ground, 
+		       everything started to draw my attention. As the time went by, my interest for photography gradually increased. 
+		       The interest really boosted when I tried my friend’s Sony a600 (Mirrorless) a prime lens for the first time. 
+		       What an experience it was! I was forced to move, to think about my shots and to work harder on composition. 
+		       I had to learn to zoom with my feet! Added to that was the fact that with a fast prime lens 
+		       I was able to blur the background and get shots that were impossible before. And so my enthusiasm was born.
 				</br>
 				  
 				  
