--- a/personal.html
+++ b/personal.html
@@ -129,15 +129,14 @@
          <div class="w3-col m6 w3-hide-small w3-padding-large">
             <div class="container">
                <p>
-                  My interest in photography began when I was around 17 (2002). 
-                  This was a strange time, 
-                  as I was walking on a cold breezy evening winter after a hecitc session at my institute. 
-                  Lost in thoughts, having flashbacks of all the good and bad things in my past. Suddenly, 
-                  a little creature caught my attention. 
-                  I casually captured the moment using my Samsung S4 (Selective Mode)without any artistic intention, 
-                  but the desire to "freeze time". And as I would like to call is, I was born artist. 
-                  I quickly came to realise that what I really needed was a proper camera with manual control, thus, 
-                  I started to save up.
+                  The past few years together have been so wonderful, so unforgettable, and so amazingly fulfilling. 
+		       I cannot begin to tell you the way you have changed my life. 
+		       Not only have you brightened my days and sweetened my dreams, 
+		       but you have given me something that no one else could have given me--you have given me, hope. 
+		       With your tender love and encouraging words, you have given me a glimpse of a beautiful future. 
+		       When I look at you and hear your voice, I know I am with a special human being. 
+		       I know I am with the man I want to be with the rest of my life. Thank you for spending these years with me. 
+		       Thank you for caring for me so completely and for sharing your life with me. 
                </p>
                <button type="button" class="btn btn-info" style="background-color:#e67300"; style="outline-color:red"  data-toggle="collapse" data-target="#demo">Simple collapsible</button>
                <div id="demo" class="collapse">
