--- a/personal.html
+++ b/personal.html
@@ -194,10 +194,11 @@
       <!-- **********************Footer********************** -->
       <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
          <div class="w3-xlarge w3-section">
-            <i class="https://twitter.com/Kashi8Raja"></i>
+            <i class="fa fa-facebook w3-hover-opacity"></i>
             <i class="fa fa-instagram w3-hover-opacity"></i>
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
+		 
          </div>
          <p>&copy; Untitled. All rights reserved. Design: Raja Ali.</p>
       </footer>
