--- a/personal.html
+++ b/personal.html
@@ -134,13 +134,13 @@
 		       Not only have you brightened my days and sweetened my dreams, 
 		       but you have given me something that no one else could have given me--you have given me, hope. 
 		       With your tender love and encouraging words, you have given me a glimpse of a beautiful future. 
-		      e. 
+		       
                </p>
                <button type="button" class="btn btn-info" style="background-color:#e67300"; style="outline-color:red"  data-toggle="collapse" data-target="#demo">Read More</button>
                <div id="demo" class="collapse"> 
 		       When I look at you and hear your voice, I know I am with a special human being. 
 		       I know I am with the man I want to be with the rest of my life. Thank you for spending these years with me. 
-		       Thank you for caring for me so completely and for sharing your life with m
+		       Thank you for caring for me so completely and for sharing your life with me.
                </div>
             </div>
          </div>
