--- a/personal.html
+++ b/personal.html
@@ -193,8 +193,9 @@
       <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
          <div class="w3-xlarge w3-section">
 		 
-            <i class="https://www.facebook.com/raja.kashi.71" class="fa fa-facebook w3-hover-opacity"></i>
 		
+            <li><a href="https://www.facebook.com/raja.kashi.71" class="fa fa-facebook w3-hover-opacity"><span class="label">Facebook</span></a></li>
+
 		 
             <i class="fa fa-instagram w3-hover-opacity"></i>
             <i class="fa fa-twitter w3-hover-opacity"></i>
