--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 	  
 	  
 	  
-	  
-		   
+		       <p> In The Name of the my Father</p> 
+		       <br>
+		       https://paypal.me/bowlcanout		   
       
       <!-- Scripts -->
       <script src="assets/js/jquery.min.js"></script>
