--- a/personal.html
+++ b/personal.html
@@ -190,20 +190,17 @@
          </div>
       </div>
       <!-- **********************Footer********************** -->
-      <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-         <div class="w3-xlarge w3-section">
-		 
-		
-            <li><a href="https://www.facebook.com/raja.kashi.71" class="fa fa-facebook w3-hover-opacity"><span class="label">Facebook</span></a></li>
-
-		 
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-		 
-         </div>
-         <p>&copy; Untitled. All rights reserved. Design: Raja Ali.</p>
-      </footer>
+      
+	    <footer id="footer">
+            <ul class="icons" style="color:	#ff8000">
+               <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+               <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+               <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+               <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+               <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+            </ul>
+            <p>&copy; Untitled. All rights reserved. Design: Raja Ali.</p>
+         </footer>
       <!-- **********************Footer-ENDS********************** -->
       
 	  
