--- a/personal.html
+++ b/personal.html
@@ -154,30 +154,30 @@
          <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
          <div class="w3-row-padding w3-center">
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork1.jpg" style="width:100%" "height:100"  onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+               <img src="images/thumbs/mywork1.jpg" style="width:100%" "height:100"  onclick="onClick(this)" class="w3-hover-opacity" alt="There is a reward for kindness to every living thing">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+               <img src="images/thumbs/mywork4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+               <img src="images/thumbs/mywork3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A flower cannot blossom without sunshine, and man cannot live without love">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+               <img src="images/thumbs/mywork2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="You are not a drop in the ocean, You are entire ocean in a drop">
             </div>
          </div>
          <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+               <img src="images/thumbs/mywork10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="If only you could see through innocent eyes">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+               <img src="images/thumbs/mywork6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Ask ALLAH, he will make the climbing easier">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+               <img src="images/thumbs/mywork11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The key to success is 'hardship'">
             </div>
             <div class="w3-col m3">
-               <img src="images/thumbs/mywork13.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+               <img src="images/thumbs/mywork13.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Ajj ki shaam, tere naam">
             </div>
          </div>
       </div>
