--- a/personal.html
+++ b/personal.html
@@ -129,18 +129,22 @@
          <div class="w3-col m6 w3-hide-small w3-padding-large">
             <div class="container">
                <p>
-                  The past few years together have been so wonderful, so unforgettable, and so amazingly fulfilling. 
-		       I cannot begin to tell you the way you have changed my life. 
-		       Not only have you brightened my days and sweetened my dreams, 
-		       but you have given me something that no one else could have given me--you have given me, hope. 
-		       With your tender love and encouraging words, you have given me a glimpse of a beautiful future. 
+                  The past few years together have been so wonderful, so unforgettable, and so amazingly <br/>
+				  fulfilling.I cannot begin to tell you the way you have changed my life. 
+		       Not only have you <br/>
+			   brightened my days and sweetened my dreams, but you have given me something that no <br/>
+			   one else could have given me you have given me hope. With your tender love and <br/>
+			   encouraging words, you have given me a glimpse of a beautiful future. 
 		       
                </p>
                <button type="button" class="btn btn-info" style="background-color:#e67300"; style="outline-color:red"  data-toggle="collapse" data-target="#demo">Read More</button>
                <div id="demo" class="collapse"> 
-		       When I look at you and hear your voice, I know I am with a special human being. 
-		       I know I am with the man I want to be with the rest of my life. Thank you for spending these years with me. 
-		       Thank you for caring for me so completely and for sharing your life with me.
+		       When I look at you and hear your voice, I know I am <br/>
+			   with a special human being. 
+		       I know I am with the man I want to be with the rest of my life. 
+			   <br/>Thank you for spending these years with me. 
+		       Thank you for caring for me so completely and 
+			   <br/>for sharing your life with me.
                </div>
             </div>
          </div>
