--- a/personal.html
+++ b/personal.html
@@ -133,7 +133,7 @@
 				  fulfilling.I cannot begin to tell you the way you have changed my life. 
 		       Not only have you <br/>
 			   brightened my days and sweetened my dreams, but you have given me something that no <br/>
-			   one else could have given me you have given me hope. With your tender love and <br/>
+			   one else could have given me you have given me, hope. With your tender sympathy and <br/>
 			   encouraging words, you have given me a glimpse of a beautiful future. 
 		       
                </p>
@@ -141,10 +141,8 @@
                <div id="demo" class="collapse"> 
 		       When I look at you and hear your voice, I know I am <br/>
 			   with a special human being. 
-		       I know I am with the man I want to be with the rest of my life. 
-			   <br/>Thank you for spending these years with me. 
-		       Thank you for caring for me so completely and 
-			   <br/>for sharing your life with me.
+		       I know I am with the one I want to be with the rest of my life. 
+			   <br/>Thank you for spending these years and	for sharing your life with me.
                </div>
             </div>
          </div>
