--- a/personal.html
+++ b/personal.html
@@ -28,6 +28,7 @@
          <li><a href="portfolio.html">Portfolio</a></li>
          <li><a href="portraits.html">Portraits</a></li>
          <li><a href="personal.html">Personal</a></li>
+         <li><a href="Letter.html">RemembranceLetter</a></li>
       </ul>
    </header>
    <!--************************************BODY STARTS********************************-->
