--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,10 @@
                <li><a href="portfolio.html">Portfolio</a></li>
                <li><a href="portraits.html">Portraits</a></li>
                <li><a href="personal.html">Personal</a></li>
+		<li><a href="personal.html">RemembranceLetter</a></li>
+
+		    
+
             </ul>
             <h1>
             Look into my <strong style="color:	#ff8000">Portfolio</strong>. 
