--- a/portraits.html
+++ b/portraits.html
@@ -26,6 +26,9 @@
                <li><a href="portfolio.html">Portfolio</a></li>
                <li><a href="portraits.html">Portraits</a></li>
                <li><a href="personal.html">Personal</a></li>
+               <li><a href="personal.html">RemembranceLetter</a></li>
+		        
+		    
             </ul>
             <h1>The face is the <strong style="color:#ff8000">Soul</strong>    of the body</h1> 
            </header>
