--- a/Letter.html
+++ b/Letter.html
@@ -30,7 +30,7 @@
          <li><a href="portraits.html">Portraits</a></li>
          <li><a href="personal.html">Personal</a></li>
 		 <br>
-		 <li><a href="Letter.html">Letter</a></li>
+	 <li><a href="Letter.html">RemembranceLetter</a></li>
 
       </ul>
    </header>
