--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
    <!------------------- START PAGE CONTENT ------------------->
    <body>
    
-    <h1 align="left" font>In the name of the <i><font color="yellow">LOVED ONE</font></i></h1>
-
-    <p align="left" style="font-color:black">
+     <h2 align="left" font>In the name of the LOVED ONE <i><font  color="yellow" ><a href="Letter.html" class="w3-bar-item w3-button w3-button">RemembranceLetter</a></font></i></h1>   
    <a href="https://paypal.me/bowlcanout" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a>
+   <p align="left" style="font-color:black">
 
 </p>
 	   
