--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
    <!------------------- START PAGE CONTENT ------------------->
    <body>
    
-     <h2 align="left" font>In the name of the LOVED ONE <i><font  color="yellow" ><a href="Letter.html" class="w3-bar-item w3-button w3-button">RemembranceLetter</a></font></i></h1>   
-   <a href="https://paypal.me/bowlcanout" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a>
+  <h2 align="left" font>In the name of the LOVED ONE <font  color="yellow" ><a href="Letter.html" class="w3-bar-item w3-button w3-button"><u>RemembranceLetter</a></font></u>   
+<br>  
+  <a href="https://paypal.me/bowlcanout" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a>
    <p align="left" style="font-color:black">
+  
 
 </p>
 	   
