--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
    <!------------------- START PAGE CONTENT ------------------->
    <body>
    
-  <h2 align="left" font>In the name of the LOVED ONE <font  color="yellow" ><a href="Letter.html" class="w3-bar-item w3-button w3-button"><u>RemembranceLetter</a></font></u>   
-<br>  
-  <a href="https://paypal.me/bowlcanout" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a>
-   <p align="left" style="font-color:black">
-  
+ <br>  
 
+  <a href="https://www.gofundme.com/ahy3j-together-we-will-beat-cancer/donate" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a> <b>with Credit/Debit Card </b>  <p align="left" style="font-color:black">
+</p>
+
+  <a href="https://paypal.me/bowlcanout" class="w3-bar-item w3-button w3-button  w3-yellow">Donate4Cancer</a> <b>With Paypal</b>
+   <p align="left" style="font-color:black">
+   
+  
 </p>
 	   
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
